# openarm_isaac_lab

./: README.md
scripts/reinforcement_learning/rl_games/: play.py  train.py
scripts/reinforcement_learning/rsl_rl/: play.py  train.py
source/bi_nero/: pyproject.toml  setup.py
source/bi_nero/bi_nero/: __init__.py
source/bi_nero/bi_nero.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
source/bi_nero/bi_nero/assets/: bi_nero.py
source/bi_nero/bi_nero/tasks/manager_based/bimanual/reach/: REACH_REWARD_AND_BIMANUAL_NOTES.md  reach_env_cfg.py  sim2sim_joint_writer.py
source/bi_nero/bi_nero/tasks/manager_based/bimanual/reach/config/: __init__.py  joint_pos_env_cfg.py
source/bi_nero/bi_nero/tasks/manager_based/bimanual/reach/mdp/: rewards.py  (+1 more)
source/bi_nero/config/: extension.toml
source/bi_nero/nero.egg-info/: PKG-INFO
source/nero/: pyproject.toml  setup.py
source/nero/config/: extension.toml
source/nero/nero/: __init__.py
source/nero/nero.egg-info/: SOURCES.txt
source/nero/nero/assets/: nero.py
source/nero/nero/tasks/: __init__.py
source/nero/nero/tasks/manager_based/reach/: reach_env_cfg.py
source/nero/nero/tasks/manager_based/reach/config/: __init__.py  joint_pos_env_cfg.py  moving_joint_pos_env_cfg.py
source/nero/nero/tasks/manager_based/reach/config/agents/: rl_games_ppo_cfg.yaml  rsl_rl_ppo_cfg.py
source/nero/nero/tasks/manager_based/reach/mdp/: __init__.py  events.py  moving_pose_command.py  observations.py  rewards.py
source/openarm/openarm/tasks/manager_based/openarm_manipulation/assets/: openarm_bimanual.py  openarm_unimanual.py
(+6 files in other folders)
