# Copyright 2025 Enactic, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "nero"
authors = [
    { name = "Enactic, Inc.", email = "contact@enactic.com" },
]
description = "Nero Isaac Lab integration"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["extension", "isaaclab"]
license = { text = "Apache-2.0" }
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Isaac Sim :: 4.5.0",
    "Isaac Sim :: 5.0.0",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["nero"]

